[update]Modification of the home cards so that they are displayed correctly on small screens. // Modificacion de las cards del home para que se muestren correctamente en pantallas pequeñas.

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -23,4 +23,5 @@
   display: flex;
   justify-content: space-evenly;
   margin: 0;
+  height: 100%;
 }
